<?xml version="1.0"?>
<package format="2">
  <name>assignment</name>
  <version>0.1.0</version>
  <description>The vineyard_simulation package</description>

  <maintainer email="27013315@students.lincoln.ac.uk">Sean</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/rp_assignment_1</url> -->
  <author email="27013315@students.lincoln.ac.uk">Sean Chow</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>